# 2023-II

./: .gitignore  CMakeLists.txt  README.md
AED/: hi.cpp
AED/Parcial/: Implementacion1.cpp  printbfs.cpp
AED/S1/: Teoria.cpp  arreglo.cpp
AED/S10/: smatching2.h  stringmatching2.cpp
AED/S13/: graph.h  heap.h  main.cpp
AED/S2/: CircularDoubleLinkedList.h  DoubleLinkedList.h  SimpleLinkedList.h  Teoria.cpp  main.cpp
AED/S3/: Continua.cpp  Iteradores.cpp
AED/S4/: hash.cpp
AED/S5/: BST.cpp  ChainHash.h
AED/S6/: AVL.cpp
AED/S7/: heap.cpp
Arqui/: projects.xpr
Arqui/Proyecto/: DCU.txt  Fp_clasifier.v  Proyecto.rar  SR2.v  SR_tb.v  clk_divider.v  clk_divider_tb.v  clk_divider_tb.vcd  out  sr_chiquito.v  sr_chiquito_tb.v
Arqui/S1/: primos.v  primos_tb.v  structural_primos.v
Arqui/S13/: alu.v  arm.v  arm_multi.v  condcheck.v  condlogic.v  controller.v  controller_tb.v  controller_waveform.vcd  datapath.v  decode.v  mainfsm.v  mem.v  multi_tb.vcd  multi_tb_2.vcd  mux3.v  out  regfile.v  test1  testbench.v  top.v
Arqui/S2/: fulladder.v  halfadder.v  mux21.v  mux21_tb.v
CPC/Codeforces/: template.cpp
CPC/ContestTrainee/: B.cpp  F.cpp
Mentorias/S1/: Problemitas.cpp  helloworld.cpp  kly.cpp  sesion1.cpp
Mentorias/S10/: PC3.cpp  sobrecarga_teo.cpp
Mentorias/S11/: Vec.h  myvec.h  pruebas.cpp
Mentorias/S12/: Archivosteo.cpp  PC3.cpp  PC3_2022_2.cpp  archivo.txt
Metodos/: test.m
Others/: PC3_Jossue.cpp  arch.cpp  clase1.cpp  jossue.cpp  key.cpp  promociones.txt
Web Scraping/: nivel1_stackoverflow.py  nivel1_wikipedia.py
matlab/: test.m
(+302 files in other folders)
